[project]
name = "roi-prototype-workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pydicom = "^3.0.1"
pyside6 = "^6.9.1"
numpy = "^2.3.2"
matplotlib = "^3.10.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
